# sonobe-practice

./: Cargo.toml  README.md
circuit_files/: cubic.r1cs  cubic.wasm
src/: main.rs
